# velocity-maya

./: .gitignore  CMakeLists.txt  README.md  test.py
include/: velocityNode.h
include/utilities/: debugUtils.h
src/: velocityMain.cpp  velocityNode.cpp
